newclay/test/Compiler/Propagation/Fail/MakeCodePointerFromStatefulLambda1/main.clay
import __primitives__.*;

main() {
    var y = 1;
    var l = (ref x) -> { return ref x, y; };
    return makeCodePointer(l, Ref[Int]), makeCodePointer(l, Ref[Float64]);
}
